# kitsune2

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  Makefile.toml  README.md  flake.nix  rust-toolchain.toml  taplo.toml
.github/workflows/: bootstrap.yaml  docker-build.yaml  prepare-release.yml  publish-release.yml  test.yaml
crates/api/: Cargo.toml  README.md
crates/api/proto/: fetch.proto  op_store.proto  publish.proto  wire.proto
crates/api/src/: access.rs  agent.rs  arc.rs  blocks.rs  bootstrap.rs  builder.rs  config.rs  doc.rs  error.rs  fetch.rs  gossip.rs  id.rs  kitsune.rs  lib.rs  local_agent_store.rs  op_store.rs  peer_meta_store.rs  peer_store.rs  protocol.rs  publish.rs  report.rs  space.rs  timestamp.rs  transport.rs  url.rs
crates/api/src/doc/: agent.rs  glossary.rs
crates/bootstrap_client/: Cargo.toml  Makefile.toml  README.md
crates/bootstrap_client/src/: lib.rs
crates/bootstrap_client/tests/: connect.rs  integration.rs
crates/bootstrap_model/: Cargo.toml
crates/bootstrap_model/src/: lib.rs
crates/bootstrap_srv/: Cargo.toml  Makefile.toml  README.md
crates/bootstrap_srv/examples/: test-auth-hook-server.rs
crates/bootstrap_srv/src/: config.rs  event.rs  http.rs  iroh_relay.rs  lib.rs  parse.rs  sbd.rs  server.rs  space.rs  store.rs  test.rs  tls.rs
crates/bootstrap_srv/src/test/: iroh_relay.rs  sbd.rs
crates/core/: Cargo.toml  Makefile.toml  README.md
crates/core/proto/: space.proto
crates/core/src/: common.rs  doc.rs  factories.rs  lib.rs
crates/core/src/doc/: core_fetch.rs
crates/core/src/factories/: core_access.rs  core_bootstrap.rs  core_fetch.rs  core_gossip.rs  core_kitsune.rs  core_local_agent_store.rs  core_publish.rs  core_report.rs  core_space.rs  mem_blocks.rs  mem_bootstrap.rs  mem_op_store.rs  mem_peer_meta_store.rs  mem_peer_store.rs  mem_transport.rs
crates/core/src/factories/core_bootstrap/: test.rs
crates/core/src/factories/core_fetch/: back_off.rs  event.rs  message_handler.rs  test.rs
crates/core/src/factories/core_fetch/test/: incoming_request_queue.rs  incoming_response_queue.rs  outgoing_request_queue.rs  request_queue.rs  response_queue.rs
crates/core/src/factories/core_gossip/: test.rs
crates/core/src/factories/core_publish/: message_handler.rs  test.rs
crates/core/src/factories/core_space/: protocol.rs  test.rs
crates/core/src/factories/mem_blocks/: test.rs
crates/core/src/factories/mem_bootstrap/: test.rs
crates/core/src/factories/mem_op_store/: test.rs  time_slice_hash_store.rs
crates/core/src/factories/mem_peer_meta_store/: test.rs
crates/core/src/factories/mem_peer_store/: test.rs  test_utils.rs
crates/core/src/factories/mem_transport/: test.rs
crates/core/tests/: fetch.rs
crates/dht/: Cargo.toml  README.md
crates/dht/src/: arc_set.rs  combine.rs  constant.rs  dht.rs  hash.rs  lib.rs  test.rs  time.rs
crates/dht/src/dht/: snapshot.rs  tests.rs
crates/dht/src/dht/tests/: harness.rs
crates/gossip/: Cargo.toml  Makefile.toml  README.md
crates/gossip/proto/: gossip.proto
crates/gossip/src/: burst.rs  config.rs  constant.rs  error.rs  gossip.rs  harness.rs  initiate.rs  lib.rs  peer_meta_store.rs  protocol.rs  respond.rs  state.rs  storage_arc.rs  summary.rs  timeout.rs  update.rs
crates/gossip/src/harness/: op_store.rs
crates/gossip/src/respond/: accept.rs  agents.rs  busy.rs  disc_sector_details_diff.rs  disc_sector_details_diff_response.rs  disc_sectors_diff.rs  harness.rs  hashes.rs  initiate.rs  no_diff.rs  ring_sector_details_diff.rs  ring_sector_details_diff_response.rs  terminate.rs  tests.rs
crates/gossip/tests/: historical_load.rs  initial_sync.rs
crates/kitsune2/: Cargo.toml  Makefile.toml  README.md
crates/kitsune2/examples/: schema.rs
crates/kitsune2/src/: factories.rs  lib.rs
crates/kitsune2/src/factories/: core_space.rs
crates/kitsune2/src/factories/mem_peer_store/: test.rs
crates/kitsune2/tests/: blocks.rs  integration.rs
crates/kitsune2_showcase/: Cargo.toml  README.md
crates/kitsune2_showcase/src/: app.rs  main.rs  readline.rs
crates/kitsune2_showcase/src/app/: file_data.rs  file_op_store.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  op_store.rs
crates/memory/src/op_store/: time_slice_hash_store.rs
crates/models/: Cargo.toml
crates/models/src/: availability.rs  bootstrap.rs  fetch.rs  lib.rs  network.rs  op_store_memory.rs  peer_store_basic.rs  peer_store_sharded.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: agent.rs  bootstrap.rs  id.rs  iroh_relay.rs  lib.rs  noop_bootstrap.rs  space.rs  tx_handler.rs
crates/tool_proto_build/: Cargo.toml  Makefile.toml
crates/tool_proto_build/src/: main.rs
crates/toy/: Cargo.toml
crates/toy/examples/: busybees.rs
crates/toy/src/: lib.rs
crates/transport_iroh/: Cargo.toml  README.md
crates/transport_iroh/src/: connection.rs  connection_context.rs  endpoint.rs  endpoint_integration.rs  frame.rs  lib.rs  stream.rs  stream_io.rs  test_utils.rs  url.rs
crates/transport_iroh/src/test_utils/: harness.rs  relay_server.rs
crates/transport_iroh/src/tests/: frame.rs  mod.rs  stream.rs  stream_io.rs  url.rs
crates/transport_iroh/tests/: harness.rs  integration.rs
crates/transport_tx5/: Cargo.toml  Makefile.toml
crates/transport_tx5/src/: harness.rs  lib.rs  test.rs
crates/transport_tx5/tests/: integration.rs
docker/kitsune2_bootstrap_srv/: Dockerfile
docker/kitsune2_bootstrap_srv_iroh_relay/: Dockerfile
docker/kitsune2_test_auth_hook_server/: Dockerfile
docs-site/: README.md  docusaurus.config.ts  package.json  sidebars.ts
docs-site/docs/: intro.md
docs-site/src/css/: custom.css
docs-site/src/pages/: index.tsx
