[workspace]
members = [
  "crates/api",
  "crates/bootstrap_srv",
]
resolver = "2"

[workspace.dependencies]
# debugging is far easier when you can see short byte arrays
# as base64 instead of decimal u8s.
base64 = "0.22.1"
# shallow-clone byte arrays is a solved problem.
# bytes is the crate that solves it.
bytes = { version = "1.8.0", features = ["serde"] }
# bootstrap_srv for cli param parsing
clap = "4.5.21"
# bootstrap_srv uses this to make a best-effort to clean up tempfiles
# on shutdown.
ctrlc = { version = "3.4.5", features = ["termination"] }
# bootstrap_srv for signature verification.
ed25519-dalek = "2.1.1"
# bootstrap_srv uses this to determine worker thread count.
num_cpus = "1.16.0"
# kitsune types need to be serializable for network transmission.
serde = { version = "1.0.215", features = ["derive"] }
# kitsune2 agent info is serialized as json to improve debugability of
# bootstrapping. So, we need a json library.
serde_json = "1.0.132"
# bootstrap_srv uses tempfiles as virtual memory for storage instead of RAM.
tempfile = "3.14.0"
# this is used by bootstrap_srv as the http server implementation.
tiny_http = "0.12.0"
# --- dev-dependencies ---
# The following workspace dependencies are used in crate dev-dependencies.
# Please be careful to only include them in dev dependencies or move them
# above this section.
# --- dev-dependencies ---
tokio = "1.41.1"
ureq = "2.10.1"
