[package]
name = "kitsune2_bootstrap_client"
version.workspace = true
description = "p2p / dht communication WAN discovery bootstrapping client"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/kitsune2_bootstrap_client"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[dependencies]
base64 = { workspace = true }
kitsune2_api = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ureq = { workspace = true, features = ["tls"] }
url = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
axum-server = { workspace = true }
bytes = { workspace = true }
kitsune2_test_utils = { workspace = true }
kitsune2_bootstrap_srv = { workspace = true }
# cannot use workspace here because it includes the version
# and makes publishing fail.
kitsune2_core = { path = "../core" }
tokio = { workspace = true, features = ["full"] }
