[package]
name = "kitsune2_bootstrap_srv"
version.workspace = true
description = "p2p / dht communication WAN discovery bootstrapping server"
license.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/kitsune2_bootstrap_srv"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[dependencies]
async-channel = { workspace = true }
axum = { workspace = true, default-features = false, features = [
  "http1",
  "json",
  "tokio",
  "ws",
] }
axum-server = { workspace = true, features = ["tls-rustls-no-provider"] }
rustls = { workspace = true, features = ["ring"] }
base64 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "wrap_help"] }
ctrlc = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
num_cpus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
  "time",
  "rt",
  "rt-multi-thread",
  "io-util",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

sbd-server = { workspace = true, features = ["tungstenite"] }
tokio-rustls = { workspace = true }

[dev-dependencies]
ureq = { workspace = true, features = ["tls"] }
rcgen = { workspace = true }

sbd-client = { workspace = true }

[features]
default = []

# enable axum http2 support
http2 = ["axum/http2"]
