[package]
name = "kitsune2_bootstrap_srv"
version.workspace = true
description = "p2p / dht communication WAN discovery bootstrapping server"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/kitsune2_bootstrap_srv"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[dependencies]
async-channel = { workspace = true }
axum = { workspace = true, default-features = false, features = [
  "http1",
  "json",
  "tokio",
  "ws",
] }
axum-server = { workspace = true, features = ["tls-rustls-no-provider"] }
tower-http = { workspace = true, features = ["cors"] }
http = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
base64 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "wrap_help"] }
ctrlc = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
num_cpus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
  "time",
  "rt",
  "rt-multi-thread",
  "io-util",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

sbd-server = { workspace = true, features = ["tungstenite"], optional = true }
opentelemetry = { workspace = true }
# iroh relay server-related dependencies
axum-reverse-proxy = { workspace = true, optional = true }
iroh = { workspace = true, optional = true }
iroh-relay = { workspace = true, features = ["server"], optional = true }

[dev-dependencies]
ureq = { workspace = true }
rand = { workspace = true }
rcgen = { workspace = true }
sbd-client = { workspace = true }
iroh = { workspace = true, features = ["test-utils"] }
kitsune2_test_utils = { workspace = true }

[features]
default = ["sbd"]

# enable axum http2 support
http2 = ["axum/http2"]

# use sbd as signaling and relay server
sbd = ["dep:sbd-server"]

# use iroh relay server
iroh-relay = ["dep:axum-reverse-proxy", "dep:iroh", "dep:iroh-relay"]
