[package]
name = "kitsune2_core"
version = "0.0.1-alpha"
description = "p2p / dht communication framework core and testing modules"
license = "Apache-2.0"
homepage = "https://github.com/holochain/kitsune2"
documentation = "https://docs.rs/kitsune2"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo", "p2p", "dht", "networking"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
backon = { workspace = true }
bytes = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
kitsune2_api = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
axum = { workspace = true, default-features = false, features = [
  "http1",
  "tokio",
] }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
