[package]
name = "kitsune2_core"
version.workspace = true
description = "p2p / dht communication framework core and testing modules"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/kitsune2_core"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[dependencies]
kitsune2_api = { workspace = true }
kitsune2_bootstrap_client = { workspace = true }

bytes = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
futures = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing = { workspace = true }
url = { workspace = true }

# Feature: schema
schemars = { workspace = true, optional = true }

[dev-dependencies]
ed25519-dalek = { workspace = true, features = ["rand_core"] }
kitsune2_api = { workspace = true, features = ["mockall"] }
kitsune2_bootstrap_srv = { workspace = true }
kitsune2_test_utils = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
default = []

schema = ["dep:schemars"]
