[package]
name = "kitsune2_dht"
version = "0.0.1-alpha"
description = "The DHT model for kitsune2"
license = "Apache-2.0"
homepage = "https://github.com/holochain/kitsune2"
documentation = "https://docs.rs/kitsune2_api"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo", "p2p", "dht", "networking"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
kitsune2_api = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
kitsune2_memory = { workspace = true }
kitsune2_test_utils = { workspace = true }

tokio = { workspace = true, features = ["macros", "rt"] }
rand = { workspace = true }
