[package]
name = "kitsune2_dht"
version.workspace = true
description = "The DHT model for kitsune2"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/kitsune2_dht"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[dependencies]
kitsune2_api = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

mockall = { workspace = true, optional = true }

[dev-dependencies]
kitsune2_core = { workspace = true }
kitsune2_test_utils = { workspace = true }

tokio = { workspace = true, features = ["macros", "rt"] }
rand = { workspace = true }

[features]
mockall = ["dep:mockall"]
