[package]
name = "kitsune2_gossip"
version.workspace = true
description = "Gossip implementation for kitsune2"
license.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/kitsune2_api"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[dependencies]
kitsune2_api = { workspace = true }
kitsune2_dht = { workspace = true }
kitsune2_core = { workspace = true }

prost = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
kitsune2_api = { workspace = true, features = ["mockall"] }
kitsune2_core = { workspace = true }
kitsune2_dht = { workspace = true, features = ["mockall"] }
kitsune2_test_utils = { workspace = true }

tokio = { workspace = true, features = ["test-util"] }
