[package]
name = "kitsune2"
version.workspace = true
description = "p2p / dht communication framework api"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/kitsune2"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[[example]]
name = "schema"
required-features = ["schema"]

[dependencies]
bytes = { workspace = true }
kitsune2_api = { workspace = true }
kitsune2_core = { workspace = true }
kitsune2_gossip = { workspace = true }
kitsune2_transport_iroh = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# Feature: schema
schemars = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
kitsune2_gossip = { workspace = true }
kitsune2_test_utils = { workspace = true }
sbd-server = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
jsonschema = { workspace = true }

[features]
