[package]
name = "kitsune2"
version.workspace = true
description = "p2p / dht communication framework api"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/kitsune2"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[[example]]
name = "schema"
required-features = ["schema"]

[dependencies]
bytes = { workspace = true }
kitsune2_api = { workspace = true }
kitsune2_core = { workspace = true }
kitsune2_gossip = { workspace = true }
kitsune2_transport_tx5 = { workspace = true, default-features = false, optional = true }
kitsune2_transport_iroh = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }

# Feature: schema
schemars = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
kitsune2_gossip = { workspace = true }
kitsune2_test_utils = { workspace = true }
sbd-server = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
jsonschema = { workspace = true }
tracing = { workspace = true }

[features]
default = ["datachannel-vendored"]

# Recommended feature to build the datachannel library as part of the tx5 build.
#
# Unless you have a build issue or other reason to use your own datachannel library, consider
# using this feature.
datachannel-vendored = [
  "backend-libdatachannel",
  "kitsune2_transport_tx5/datachannel-vendored",
]

# Use the datachannel backend for the tx5 transport.
backend-libdatachannel = ["kitsune2_transport_tx5/backend-libdatachannel"]

# Use the go-pion backend for the tx5 transport.
#
# If enabled with the `backend-libdatachannel` feature, the go-pion library will be built but not used.
backend-go-pion = ["kitsune2_transport_tx5/backend-go-pion"]


# Use the iroh transport
iroh = ["dep:kitsune2_transport_iroh"]

schema = [
  "dep:schemars",
  "dep:serde_json",
  "kitsune2_core/schema",
  "kitsune2_gossip/schema",
  "kitsune2_transport_tx5/schema",
]
