[package]
name = "kitsune2_test_utils"
description = "Test utilities for kitsune2"
version = "0.1.0-nopublish"
edition = "2021"

[dependencies]
axum = { workspace = true, default-features = false, features = [
  "http1",
  "tokio",
] }
bytes = { workspace = true }
futures = { workspace = true }
kitsune2_api = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
