[package]
name = "kitsune2_test_utils"
version.workspace = true
description = "Test utilities for kitsune2"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/kitsune2_test_utils"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true, default-features = false, features = [
  "http1",
  "tokio",
] }
bytes = { workspace = true }
futures = { workspace = true }
kitsune2_api = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde_json = { workspace = true }
