[package]
name = "kitsune2_toy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
derive_more = { workspace = true }
exhaustive = { workspace = true }
kitsune2_api = { workspace = true }
kitsune2_core = { workspace = true }
polestar = { workspace = true }
proptest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

const-random = "*"
im = "15.1.0"
itertools = "*"
