[package]
name = "kitsune2_transport_iroh"
description = "The iroh-based transport implementation for kitsune2"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bytes = { workspace = true }
iroh = { workspace = true }
# used for test-utils
iroh-relay = { workspace = true, features = ["server"], optional = true }
kitsune2_api = { workspace = true }
# used for test-utils
kitsune2_core = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
  "io-util",
] }
tracing = { workspace = true }
url = { workspace = true }
schemars = { workspace = true, optional = true }
n0-watcher = { workspace = true }

[dev-dependencies]
kitsune2_transport_iroh = { workspace = true, features = ["test-utils"] }
kitsune2_test_utils = { workspace = true }

[features]
schema = ["dep:schemars"]

test-utils = ["dep:iroh-relay", "dep:kitsune2_core"]
